# deepagents-web

./: .gitignore
libs/web-api/: README.md  pyproject.toml
libs/web-api/deepagents_web_api/: __init__.py  agent.py  main.py  models.py  streaming.py  utils.py
libs/web-api/tests/: __init__.py  conftest.py  test_file_operations.py  test_filesystem.py  test_interrupt.py  test_management.py  test_run.py  test_sessions.py
libs/web-cli/: CHANGELOG.md  README.md  index.html  package.json
libs/web-cli/css/: components.css  home.css  pages.css  sandbox.css  search.css  sidebar.css  task.css  variables.css
libs/web-cli/js/: api-client.js  app.js  config.js  home.js  preview.js  sandbox-data.js  sandbox.js  search.js  sse-client.js  task-core.js  task-slides.js  task-visualization.js  task-website.js
